# study-rust

./: 20260122.sql  CLAUDE.md  Cargo.toml  GPU_SELECTION.md  OPTIMIZATION.md  TIMING_ANALYSIS.md
.claude/: settings.local.json
configs/: unet.yaml
configs/roi_ignore/: 475_ignore.json  618_ignore.json  620_ignore.json
configs/roi_merged/: 475.json  618.json  620.json
examples/: env_test.rs  ort_inference.rs  ort_test.rs  readbigimage.rs  readimage.rs  readimageFile.rs  readimageOpencv.rs  readsmallimg.rs  region_to_tensor.rs  simple_onnx_test.rs  useonnx.rs
src/: main.rs
