[package]
name = "study-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.9"
egui = "0.28"
eframe = "0.28"
egui_extras = "0.28"
# opencv = "0.98.1"
png = "0.18.0"
jpeg-decoder = "0.3.2"
rayon = "1.11.0"
tiff = "0.11.1"
anyhow = "1.0.100"
thiserror = "2.0.18"
memmap2 = "0.9.9"
clap = { version ="4.5.54",features=["derive"]}
serde_json = "1.0.149"
serde = { version ="1.0.228", features = ["derive"]}
ort = "2.0.0-rc.11"
ndarray = "0.17.2"
